spacerm (1.3.1); urgency=low;
  * Fixed formatting errors in the source code.
  * Updated year in license  

  -- Bryan Hawkins <spcnvdrr@protonmail.com> Fri, 19 Jul 2019 06:27:33 -0500

spacerm (1.3.0); urgency=low;
  * The use of _SVID_SOURCE is deprecated. Changed to _DEFAULT_SOURCE
    instead.

  -- Bryan Hawkins <spcnvdrr@protonmail.com> Sat, 19 May 2018 14:39:57 -0500

spacerm (1.2.9); urgency=low;
  * Improved some comments.
  * Added the BSD 3-clause license to the top of the source code file.

  -- Bryan Hawkins <spcnvdrr@protonmail.com> Sun, 01 Apr 2018 13:35:02 -0500

spacerm (1.2.8); urgency=low;
  * Improved the --backup option so that the new file has the
    original file's permissions.
  * Cleaned up lits bits of code
  * Fixed an incorrect comment describing the rmchr() function

  -- Bryan Hawkins <spcnvdrr@protonmail.com> Mon, 19 Mar 2018 13:24:45 -0500

spacerm (1.2.7); urgency=low;
  * Added a new option called --dash/-d which replaces spaces with dashes.

  -- Bryan Hawkins <spcnvdrr@protonmail.com> Thu, 01 Feb 2018 11:07:05 -0600


spacerm (1.2.6); urgency=low;
  * Fixed a bug where spacerm would fail silently if the user did not have
    adequate permissions to access the file.
  * Changed the layout of the source code to make it more natural to read.

  -- Bryan Hawkins <spcnvdrr@protonmail.com>   Sat, 1 Jan 2018 13:55:39 -0600

spacerm (1.2.5); urgency=low;
  * Added the --strip option to strip the given characters from the filename
    in addition to spaces. The file extension is not modified, however file
    extensions that contain multiple parts may be modified, .e.g. .tar.gz
    the .tar portion may have characters stripped from it.
  * Fixed a bug that allowed directories and other file types to be renamed if
    specified a certain way. This program only renames regular files.
  * Added a license file making this program licensed under the 3-clause BSD
    license.
