@@ -1,6 +1,11 @@
+spacerm (1.3.2); urgency=low;
+  * Fixed access() race condition
+
+  -- Bryan Hawkins <spcnvdrr@protonmail.com> Fri, 24 Apr 2020 13:00:06 -0500
+
 spacerm (1.3.1); urgency=low;
   * Fixed formatting errors in the source code.
-  * Updated year in license  
+  * Updated year in license
 
   -- Bryan Hawkins <spcnvdrr@protonmail.com> Fri, 19 Jul 2019 06:27:33 -0500
 
